fixed keyboard issue on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,9 @@
   background: rgb(34,193,195);
   background: linear-gradient(0deg, rgba(34,193,195,0.6255544454109769) 0%,#fdbb2da4 100%);
   height: 100vh;
+  margin:0;
+  padding:0;
+
 }
 
 header{
@@ -13,11 +16,12 @@ header{
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 65px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 0 5px 0 rgba(0,0,0,0.19);
-  height:9%;
+  height:10%;
 
   .header-section{
     justify-self: end;
     margin-right: 3%;
+    
   }
 }
 
@@ -44,12 +48,15 @@ header p{
 .header-section{
   display:flex;
   flex-direction: row;
-
+  width:40%;
   
   .buttons{
     display:flex;
     flex-direction: row;
     align-items: center;
+  }
+  p{
+    align-self:flex-end;
   }
 }
 
@@ -69,6 +76,7 @@ header .header-section button{
   margin-right: 10px;
   margin-top: 3px; 
   background-color: #efc262a4;
+  
 }
 
 .green{
